# chainlog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/tests/: live.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: checkpoint.rs  crypto.rs  entry.rs  error.rs  hash.rs  keyring.rs  lib.rs  log.rs  merkle.rs  segment.rs  store.rs  util.rs  verify.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: main.rs
docs/: PROTOCOL.md
