[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["chainlog contributors"]
repository = "https://github.com/rsantacroce/chainlog"
rust-version = "1.75"

[workspace.dependencies]
chainlog-core = { path = "crates/core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
