[package]
name = "chainlog-cli"
description = "Offline verifier and inspector for chainlog audit logs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "chainlog"
path = "src/main.rs"

[dependencies]
chainlog-core = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
