[package]
name = "chainlog-cli"
description = "Offline verifier and inspector for chainlog audit logs"
keywords = ["audit-log", "cli", "verify", "tamper-evident"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "chainlog"
path = "src/main.rs"

[dependencies]
chainlog-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
