[package]
name = "chainlog-core"
description = "Tamper-evident, hash-chained, PII-aware structured audit log (embeddable core)"
keywords = ["audit-log", "tamper-evident", "hash-chain", "compliance", "logging"]
categories = ["cryptography", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/chainlog-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = "1"
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
base64 = "0.22"
getrandom = "0.2"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
