[package]
name = "chainlog-server"
description = "Standalone HTTP service wrapping chainlog-core — append-only, isolated audit log"
keywords = ["audit-log", "tamper-evident", "compliance", "server"]
categories = ["cryptography", "web-programming::http-server"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "chainlog-server"
path = "src/main.rs"

[dependencies]
chainlog-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
